Fix issue with 1-pixel alignment of buttons with dropdowns when in Safari browser

--- a/wire/modules/AdminTheme/AdminThemeUikit/uikit-pw/pw/pw-jquery-ui-custom.less
+++ b/wire/modules/AdminTheme/AdminThemeUikit/uikit-pw/pw/pw-jquery-ui-custom.less
@@ -241,6 +241,7 @@
   color: @pw-button-color;
   font-size: @pw-button-font-size;
   border-radius: @pw-button-border-radius;
+  vertical-align: initial; // vertical-align: middle; does not work with Safari
   
   &.ui-priority-secondary {
     background: @pw-button-secondary-background;
